src/objects/EventApi__Speaker__c.object
<CustomObject>
    <description>Tracks speakers and maintains a list of all the schedule items the speaker will be featured and/or presenting.</description>
    <fields>
        <fullName>EventApi__Bio__c</fullName>
        <description>Biographical information is displayed on the event with the speaker&apos;s name.</description>
        <inlineHelpText>Biographical information is displayed on the event with the speaker&apos;s name..</inlineHelpText>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Company_Name__c</fullName>
        <description>The name of the company the Speaker would like to display on his/her Speaker page and name badge.</description>
        <inlineHelpText>The name of the company the Speaker would like to display on his/her Speaker page and name badge.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the speaker&quot;s contact record.</description>
        <inlineHelpText>Link to the speaker&quot;s contact record.</inlineHelpText>
        <label>CRM Contact Link</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Speaking Engagements</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Order__c</fullName>
        <description>Value in this field defines the order used to display speakers for featured speakers and speaker components.</description>
        <inlineHelpText>Value in this field defines the order used to display speakers for featured speakers and speaker components.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Email__c</fullName>
        <description>** System Calculated Override ** The email for the Speaker. Derived from the linked Contact&apos;s &quot;Preferred Email&quot; field.</description>
        <inlineHelpText>** System Calculated Override ** The email for the Speaker. Derived from the linked Contact&apos;s &quot;Preferred Email&quot; field.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related event.</description>
        <inlineHelpText>Link to related event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Speakers</relationshipLabel>
        <relationshipName>Speakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Speaker will display in the &quot;Featured Speakers&quot; component for Lightning Events.</description>
        <inlineHelpText>When checked, the Speaker will display in the &quot;Featured Speakers&quot; component for Lightning Events.</inlineHelpText>
        <label>Is Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Large_Profile_Photo_URL__c</fullName>
        <description>Secure (&quot;https://&quot;) location of an image that will display on the event with the speaker&quot;s name and bio. Square images work best. Image should be at least 412px square and the file size should be less than 250 KB.</description>
        <inlineHelpText>Secure (&quot;https://&quot;) location of an image that will display on the event with the speaker&quot;s name and bio. Square images work best. Image should be at least 412px square and the file size should be less than 250 KB.</inlineHelpText>
        <label>Speaker Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Other_Phone__c</fullName>
        <description>Alternate phone for the Speaker.</description>
        <inlineHelpText>Alternate phone for the Speaker.</inlineHelpText>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Phone__c</fullName>
        <description>** System Calculated Override ** The primary phone for the Speaker. Derived from the linked Contact&apos;s &quot;Preffered Phone&quot; field.</description>
        <inlineHelpText>** System Calculated Override ** The primary phone for the Speaker. Derived from the linked Contact&apos;s &quot;Preffered Phone&quot; field.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Special_Requests__c</fullName>
        <description>Other information or notes about the speaker.</description>
        <inlineHelpText>Other information or notes about the speaker.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Status__c</fullName>
        <description>** Required ** The current Status for the Speaker.</description>
        <inlineHelpText>** Required ** The current Status for the Speaker.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Considering</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Considering</label>
                </value>
                <value>
                    <fullName>Invited</fullName>
                    <color>#78C953</color>
                    <label>Invited</label>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                    <color>#E27001</color>
                    <label>Tentative</label>
                </value>
                <value>
                    <fullName>Negotiating</fullName>
                    <color>#A845DC</color>
                    <label>Negotiating</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                    <color>#F3D904</color>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <color>#A53711</color>
                    <label>Declined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Title__c</fullName>
        <description>The title the Speaker would like to display on his/her Speaker page and name badge.</description>
        <inlineHelpText>The title the Speaker would like to display on his/her Speaker page and name badge.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTE__Facebook_URL__c</fullName>
        <description>Link to Speaker&apos;s Facebook profile.</description>
        <inlineHelpText>Link to Speaker&apos;s Facebook profile.</inlineHelpText>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Is_Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Speaker will display in the &quot;Featured Speakers&quot; component for Lightning Events.</description>
        <inlineHelpText>When checked, the Speaker will display in the &quot;Featured Speakers&quot; component for Lightning Events.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__LinkedIn_URL__c</fullName>
        <description>Link to the Speaker&apos;s LinkedIn profile.</description>
        <inlineHelpText>Link to the Speaker&apos;s LinkedIn profile.</inlineHelpText>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LTE__Twitter_URL__c</fullName>
        <description>Link to the Speaker&apos;s Twitter profile.</description>
        <inlineHelpText>Link to the Speaker&apos;s Twitter profile.</inlineHelpText>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Company_Name__c</columns>
        <columns>EventApi__Email__c</columns>
        <columns>EventApi__Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>